# TGFSim

./: CMakeLists.txt  StandardAtmosphere.csv  TGFSim.cc  vis.mac
include/: TGFActionInitialization.hh  TGFConstruction.hh  TGFDetector.hh  TGFGenerator.hh  TGFPhysicsList.hh  TGFRunAction.hh
sources/: TGFActionInitialization.cc  TGFConstruction.cc  TGFDetector.cc  TGFGenerator.cc  TGFPhysicsList.cc  TGFRunAction.cc
